sponsor.css
@import url(https://fonts.googleapis.com/css?family=Raleway:400,200,300,800);

/* #header{
 color: green !important ;
 
} */
.grid{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  /* margin-bottom: 100px; */
}

figure.snip0026 {
  font-family: 'Raleway', Arial, sans-serif;
  color: #fff;
  position: relative;
  overflow: hidden;
  margin: 60px;
  /* margin-right: 60px; */

  /* margin-right: 50px; */
  min-width: 220px;
  max-width: 400px;
  max-height: 350px;
  width: 100%;
  height: 100%;
  background: #161616;
  text-align: center;
  object-fit: cover; 
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 3%;
}


figure.snip0026 * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;

}
figure.snip0026 img {
  opacity: 1;
  width: 100%;
  -webkit-transition: opacity 0.35s, scale(1);
  transition: opacity 0.35s, scale(1);
}
figure.snip0026 figcaption {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: left;
}
figure.snip0026 figcaption > div {
  float: left;
  height: 100%;
  width: 50%;
  position: relative;
}
figure.snip0026 figcaption::before {
  position: absolute;
  top: 5px;
  bottom: 5px;
  left: 100%;
  right: 5px;
  content: '';
  opacity: 0;
  background-color: rgba(255, 255, 255, 0.9);
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
  -webkit-transition-delay: 0.6s;
  transition-delay: 0.6s;
}
figure.snip0026 h2,
figure.snip0026 p {
  margin: 0;
  padding: 20px;
  opacity: 0;
  position: absolute;
  width: 100%;
  -webkit-transition: opacity 0.45s, -webkit-transform 0.3s ease-in;
  transition: opacity 0.45s,-webkit-transform 0.3s ease-in,-moz-transform 0.3s ease-in,-o-transform 0.3s ease-in,transform 0.3s ease-in;
}
figure.snip0026 h2 {
  font-size: 1.4em;
  /* text-align: center; */
  top: 0;
  text-align: center;
  font-family: "Poppins", sans-serif;
  word-spacing: -0.1em;
  font-weight: 300;
  text-transform: uppercase;
  bottom: 0;
  box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
  background-color: #009e66;
  -webkit-transform: translate3d(-50%, 0%, 0);
  transform: translate3d(-50%, 0%, 0);
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  /* display: flex; */
  /* text-align: center; */

}
figure.snip0026 h2 span {
  font-weight: 700;
  /* width: 100%; */
}
figure.snip0026 p {
  bottom: 0;
  color: rgba(0, 0, 0, 0.85);
  opacity: 0;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}
figure.snip0026 a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  color: #ffffff;
}
figure.snip0026:hover img,
figure.snip0026.hover img {
  border-radius: 3%;
  opacity: 0.7;
}
figure.snip0026:hover figcaption h2,
figure.snip0026.hover figcaption h2 {
  opacity: 1;
  -webkit-transform: translate3d(0%, 0%, 0);
  transform: translate3d(0%, 0%, 0);
  -webkit-transition-delay: 0.5s;
  transition-delay: 0.5s;
  /* width: 100%; */
}
figure.snip0026:hover figcaption p,
figure.snip0026.hover figcaption p {
  border-radius: 3%;
  opacity: 1;
  -webkit-transition-delay: 0.8s;
  transition-delay: 0.8s;
}
figure.snip0026:hover figcaption::before,
figure.snip0026.hover figcaption::before {
  border-radius: 3%;
  left: 5px;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.image{
  padding-left: 20px;
  padding-right: 20px;
}

/* .name{
  padding-left: 20px; 
  padding-right: 20px;
} */

@media only screen and (max-width: 600px) {
 

figure.snip0026 {
  font-family: 'Raleway', Arial, sans-serif;
  color: #fff;
  position: relative;
  overflow: hidden;
  margin: 60px;
  
  /* margin-right: 50px; */
  /* min-width: 220px; */
  /* width: 350px;
  height: 350px; */
  /* width: 100%; */
  /* height: 100%; */
  background: #161616;
  text-align: center;
  object-fit: cover; 
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 3%;

}

figure.snip0026 h2 {
  font-size: 1.1em;
}

figure.snip0026 h2 span {
  font-weight: 800;
  font-size: 0.5 em;
  
  /* width: 100%; */
}

.grid{
  /* margin-left: 45px; */
  display: grid;
  justify-items: center;

  align-items:center;
  grid-template-areas:
    'fig1'
    'fig2'
    'fig3'
    'fig4'
    'fig5'
    'fig6'
    'fig7';

  grid-template-rows: 250px 250px 250px 250px 250px 250px 250px;
  grid-template-columns: 250px;

  grid-row-gap: 60px;
}
  .name_logo{
    width: 250px !important;
    height: 50px !important;
    /* display: flex !important; */
    align-items: center !important;
  }
  



.fig1{
   grid-area:fig1;
   /* margin: 100px; */

}
.fig2{
   grid-area:fig2;
}
.fig3{
   grid-area:fig3;
   
}
.fig4{
   grid-area:fig4;
}
.fig5{
   grid-area:fig5;
}
.fig6{
   grid-area:fig6;
}
.fig7{
  grid-area: fig7;
  /* top: 100px; */
  
}


}



/* Demo purposes only */
/* html {
  height: 100%;
}
body {
  background-color: #000000;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: wrap;
  margin: 0;
  height: 100%;
} */

.h2{
  animation-fill-mode: 3s;
  text-align: left;
  margin-top: 100px;
}


@media only screen and (min-width: 1280px) {
.grid{
    display: grid;
    /* align-items: center; */
    justify-items: center;

  grid-template-areas:
    'fig1 fig2 fig3'
    'fig4 fig5 fig6'
    '.... fig7 ....';
    
    grid-column-gap: 60px;
    grid-row-gap: 80px;

    grid-template-rows: 400px 400px 400px;
    grid-template-columns: 400px 400px 400px;


    /* margin-bottom: 100px; */
    
}
.row{
    margin-bottom: 100px;
}

/* figure.snip0026 img{
  width: 40px;
  height: 400px;
  border-radius: 3%;
} */

.link{
    font-size: 1.1em;
    /* margin-bottom: 500px; */
}

.fig1{
   grid-area:fig1;
   margin: 100px;

}
.fig2{
   grid-area:fig2;
}
.fig3{
   grid-area:fig3;
   
}
.fig4{
   grid-area:fig4;
}
.fig5{
   grid-area:fig5;
}
.fig6{
   grid-area:fig6;
}
.fig7{
  grid-area: fig7;
  /* top: 100px; */
  
}

}

